--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     background-size: cover;
     background-position: center top;
     height: 100vh;
-    margin-bottom: 344px;
+    padding-top: 344px;
 }
 .main_banner.banner_2{
     background-image: url("../images/01 2.jpg");
@@ -19,18 +19,82 @@
     background-image: url("../images/01 4.jpg");
 }
 .container{
-    max-width: 1100px;
     margin: auto;
+    max-width: 1100px;
 }
 header{
     position: absolute;
     width: 100%;
     left: 0;
     top: 0;
+    padding-top: 31px;
+}
+header .container{
+    display: flex;
+    justify-content: space-between;
+}
+.d_flex{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+header p{
+    margin-left: 22px;
+    font-size: 15px;
+    line-height: 19px;
+    color: #FFFFFF;
+}
+header li span{
+    display: inline-block;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 15px;
+    padding: 7px 30px;
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 22px;
+}
+header ul{
+    list-style: none;
+    display: flex;
+    padding-top: 1px;
+}
+header li{
+    margin-left: 23px;
+}
+header .soc{
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    text-align: center;
+    display: inline-block;
+    line-height: 38px;
 }
 .main_banner h1{
     font-size: 55px;
     line-height: 55px;
     color: #181818;
-    margin-bottom: 20px;
+    font-family: sans-serif;
+    margin-bottom: 30px;
 }
+.main_banner p{
+    font-family: sans-serif;
+    font-size: 34px;
+    line-height: 37px;
+    margin-bottom: 65px;
+    color: #181818;
+}
+.main_banner .btn{
+    display: inline-block;
+    padding: 23px 47px;
+    background: #FFFFFF;
+    border-radius: 40px;
+    color: #181818;
+    font-size: 18px;
+    text-decoration: none;
+    margin-right: 20px;
+}
+
+
