--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
+@font-face {
+    font-family: '20 Kopeek';
+    src: url('../fonts/20Kopeek-Book.eot');
+    src: url('../fonts/20Kopeek-Book.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/20Kopeek-Book.woff2') format('woff2'),
+    url('../fonts/20Kopeek-Book.woff') format('woff'),
+    url('../fonts/20Kopeek-Book.ttf') format('truetype'),
+    url('../fonts/20Kopeek-Book.svg#20Kopeek-Book') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: '20 Kopeek';
+    src: url('../fonts/20Kopeek.eot');
+    src: url('../fonts/20Kopeek.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/20Kopeek.woff2') format('woff2'),
+    url('../fonts/20Kopeek.woff') format('woff'),
+    url('../fonts/20Kopeek.ttf') format('truetype'),
+    url('../fonts/20Kopeek.svg#20Kopeek') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
 *{
     padding: 0;
     margin: 0;
@@ -43,6 +69,8 @@ header p{
     font-size: 15px;
     line-height: 19px;
     color: #FFFFFF;
+    font-family: '20 Kopeek';
+    font-weight: normal;
 }
 header li span{
     display: inline-block;
@@ -53,6 +81,8 @@ header li span{
     color: #FFFFFF;
     font-size: 16px;
     line-height: 22px;
+    font-family: '20 Kopeek';
+    font-weight: normal;
 }
 header ul{
     list-style: none;
@@ -76,11 +106,11 @@ header .soc{
     font-size: 55px;
     line-height: 55px;
     color: #181818;
-    font-family: sans-serif;
+    font-family: '20 Kopeek';
     margin-bottom: 30px;
 }
 .main_banner p{
-    font-family: sans-serif;
+    font-family: '20 Kopeek';
     font-size: 34px;
     line-height: 37px;
     margin-bottom: 65px;
@@ -95,6 +125,8 @@ header .soc{
     font-size: 18px;
     text-decoration: none;
     margin-right: 20px;
+    font-family: '20 Kopeek';
+    font-weight: normal;
 }
 .title{
     margin-top: 70px;
@@ -102,16 +134,18 @@ header .soc{
     font-size: 38px;
     line-height: 42px;
     color: #181818;
-    font-family: sans-serif;
+    font-family: '20 Kopeek';
+    font-weight: normal;
 }
 .description p{
     font-size: 18px;
     line-height: 25px;
     color: #181818;
-    font-family: sans-serif;
+    font-family: '20 Kopeek';
     text-align: left;
     vertical-align: top;
     margin-left: 30px;
+    font-weight: normal;
 }
 .description p:last-of-type{
     margin-top: 20px;
@@ -125,7 +159,8 @@ header .soc{
     font-size: 55px;
     line-height: 55px;
     color: #181818;
-    font-family: sans-serif;
+    font-family: '20 Kopeek';
+    font-weight: normal;
 }
 .list{
     list-style: none;
@@ -135,20 +170,21 @@ header .soc{
     font-size: 18px;
     line-height: 25px;
     color: #181818;
-    font-family: sans-serif;
+    font-family: '20 Kopeek';
     text-align: left;
     display: flex;
-
+    font-weight: normal;
 }
 .list span{
     display: inline-block;
     font-size: 55px;
     line-height: 55px;
     color: #181818;
-    font-family: sans-serif;
+    font-family: '20 Kopeek';
     margin-right: 8px;
     text-align: left;
     margin-top: 40px;
+    font-weight: normal;
 }
 .list p{
     margin-top: 65px;
@@ -164,7 +200,8 @@ header .soc{
     margin-bottom: 120px;
 }
 .title_2{
-    font-family: sans-serif;
+    font-family: '20 Kopeek';
+    font-weight: normal;
     font-size: 38px;
     color: #181818;
     line-height: 42px;
@@ -174,14 +211,15 @@ header .soc{
     margin-right: 82px;
     padding-top: 57px;
     font-size: 18px;
-    font-family: sans-serif;
+    font-family: '20 Kopeek';
+    font-weight: normal;
     color: #181818;
     line-height: 25px;
     text-align: left;
     max-width: 396px;
 }
 .description_2 p{
-    padding: 10px;
+    padding: 7px 7px 11px 13px;
     margin-bottom: 20px;
 }
 .description_2 p:last-of-type{
@@ -193,10 +231,145 @@ header .soc{
     margin: auto;
     max-width: 1151px;
 }
-.price{
+.img{
     display: block;
     width: 100%;
 }
+.d_flex_1{
+    display: flex;
+    width: 100%;
+}
+.project_1 a{
+    font-size: 18px;
+    line-height:25px;
+    color: #181818;
+    border-radius: 40px;
+    border: 1px solid #181818;
+    text-decoration: none;
+    margin-top: 45px;
+    padding: 23px 47px;
+    font-family: '20 Kopeek';
+}
+.project_1{
+    margin-top: 133px;
+}
+.project_1 h3{
+    margin: 45px 183px 4px 0;
+    font-size: 55px;
+    line-height:55px;
+    color: #181818;
+    font-family: '20 Kopeek';
+}
+.project_1 p{
+    font-size: 18px;
+    line-height: 25px;
+    color: #181818;
+    margin-bottom: 100px;
+    font-family: '20 Kopeek';
+}
+.d_flex_1{
+    display: flex;
+    width: 100%;
+}
+.about_guideline{
+    margin-left: 16px;
+}
+.about_guideline p{
+    font-size: 18px;
+    line-height: 25px;
+    font-family: '20 Kopeek';
+    font-weight: normal;
+}
+.color{
+    color: #181818;
+    padding: 11px 18px 11px 14px;
+}
+.about_guideline h3{
+    padding-bottom: 10px;
+    font-size: 26px;
+    line-height: 29px;
+    margin-bottom: 10px;
+    font-family: '20 Kopeek';
+    font-weight: normal;
+}
+.about_guideline div{
+    background-color: #2B59C3;
+    color: #FFFFFF;
+    border-radius: 5px;
+    padding: 11px 39px 18px 14px;
+}
+.form{
+    margin-top: 77px;
+}
+.form h3{
+    font-size: 38px;
+    line-height:42px;
+    color: #181818;
+    margin-bottom: 11px;
+    font-family: '20 Kopeek';
+    font-weight: normal;
+}
+.form p{
+    font-size: 26px;
+    line-height:29px;
+    color: #181818;
+    margin-bottom: 27px;
+    font-family: '20 Kopeek';
+    font-weight: normal;
+}
+.first_name_phone{
+    border: 1px solid #181818;
+    box-sizing: border-box;
+    border-radius: 10px;
+    font-size: 18px;
+    line-height: 25px;
+    color: #868686;
+    display: inline-block;
+    max-width: 350px;
+    width: 100%;
+    font-family: '20 Kopeek';
+    font-weight: normal;
+}
+#first_name{
+    padding: 23px 237px 29px 23px ;
+    margin-right: 30px;
+}
+#phone{
+    padding: 23px 149px 29px 23px ;
+}
+.application{
+    margin-left: 30px;
+    padding: 23px 47px;
+    text-decoration: none;
+    display: inline-block;
+    background: #2B59C3;
+    border-radius: 40px;
+    font-size: 18px;
+    line-height:25px;
+    color: #FFFFFF;
+    font-family: '20 Kopeek';
+    font-weight: normal;
+}
+#i_agree{
+    margin-top: 21px;
+    font-size: 18px;
+    line-height: 25px;
+    color: #181818;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    border-radius: 5px;
+    font-family: '20 Kopeek';
+    font-weight: normal;
+}
+.agree{
+    text-decoration: none;
+}
+.checkbox{
+    padding-right: 11px;
+}
+
 
 
 
