--- a/css/style.css
+++ b/css/style.css
@@ -64,10 +64,8 @@ header .container{
 }
 header p{
     margin-left: 22px;
-    font-size: 15px;
-    line-height: 19px;
+    font: 15px/19px '20 Kopeek';
     color: #FFFFFF;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
@@ -78,9 +76,7 @@ header li span{
     border-radius: 15px;
     padding: 7px 30px;
     color: #FFFFFF;
-    font-size: 16px;
-    line-height: 22px;
-    font-family: '20 Kopeek';
+    font: 16px/22px '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
@@ -103,18 +99,14 @@ header .soc{
     line-height: 38px;
 }
 .main_banner h1{
-    font-size: 55px;
-    line-height: 55px;
+    font: 55px/55px '20 Kopeek';
     color: #181818;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
     margin-bottom: 30px;
 }
 .main_banner p{
-    font-family: '20 Kopeek';
-    font-size: 34px;
-    line-height: 37px;
+    font: 34px/37px '20 Kopeek';
     margin-bottom: 65px;
     color: #181818;
 }
@@ -124,10 +116,9 @@ header .soc{
     background: #FFFFFF;
     border-radius: 40px;
     color: #181818;
-    font-size: 18px;
+    font: 18px/25px '20 Kopeek';
     text-decoration: none;
     margin-right: 20px;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
@@ -138,18 +129,14 @@ header .soc{
 .title{
     margin-top: 70px;
     margin-bottom: 15px;
-    font-size: 38px;
-    line-height: 42px;
+    font: 38px/42px '20 Kopeek';
     color: #181818;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
 .description p{
-    font-size: 18px;
-    line-height: 25px;
+    font: 18px/25px '20 Kopeek';
     color: #181818;
-    font-family: '20 Kopeek';
     text-align: left;
     vertical-align: top;
     margin-left: 30px;
@@ -165,10 +152,8 @@ header .soc{
 }
 .subtitle{
     margin-top: 141px;
-    font-size: 55px;
-    line-height: 55px;
+    font: 55px/55px '20 Kopeek';
     color: #181818;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
@@ -181,10 +166,8 @@ header .soc{
 }
 .list span{
     display: inline-block;
-    font-size: 55px;
-    line-height: 55px;
+    font: 55px/55px '20 Kopeek';
     color: #181818;
-    font-family: '20 Kopeek';
     margin-right: 8px;
     text-align: left;
     margin-top: 40px;
@@ -194,42 +177,34 @@ header .soc{
 .list p{
     margin-top: 65px;
     max-width: 260px;
-    font-size: 18px;
-    line-height: 25px;
+    font: 18px/25px '20 Kopeek';
     color: #181818;
-    font-family: '20 Kopeek';
     text-align: left;
     font-weight: normal;
     font-style: normal;
 }
 .set{
-    font-size: 15px;
+    font: 15px/19px '20 Kopeek';
     text-align: left;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
     color: #181818;
-    line-height: 19px;
     margin-top: 16px;
     margin-bottom: 120px;
 }
 .title_2{
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
-    font-size: 38px;
+    font: 38px/42px '20 Kopeek';
     color: #181818;
-    line-height: 42px;
     margin-bottom: 15px;
 }
 .description_2{
     margin-right: 82px;
     padding-top: 57px;
-    font-size: 18px;
-    font-family: '20 Kopeek';
+    font: 18px/25px '20 Kopeek';
     font-weight: normal;
     color: #181818;
-    line-height: 25px;
     text-align: left;
     max-width: 396px;
 }
@@ -258,33 +233,27 @@ header .soc{
     margin-top: 133px;
 }
 .project a{
-    font-size: 18px;
-    line-height:25px;
+    font: 18px/25px '20 Kopeek';
     color: #181818;
     border-radius: 40px;
     border: 1px solid #181818;
     text-decoration: none;
     margin-top: 45px;
     padding: 23px 47px;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
 .project h3{
     margin: 45px 89px 4px 0;
-    font-size: 55px;
-    line-height:55px;
+    font: 55px/55px '20 Kopeek';
     color: #181818;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
 .project p{
-    font-size: 18px;
-    line-height: 25px;
+    font: 18px/25px '20 Kopeek';
     color: #181818;
     margin-bottom: 100px;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
@@ -296,9 +265,7 @@ header .soc{
     margin-left: 16px;
 }
 .about_guideline p{
-    font-size: 18px;
-    line-height: 25px;
-    font-family: '20 Kopeek';
+    font: 18px/25px '20 Kopeek';
     font-weight: normal;
 }
 .guideline{
@@ -307,10 +274,8 @@ header .soc{
 }
 .about_guideline h3{
     padding-bottom: 10px;
-    font-size: 26px;
-    line-height: 29px;
+    font: 26px/29px '20 Kopeek';
     margin-bottom: 10px;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
@@ -324,20 +289,16 @@ header .soc{
     margin-top: 77px;
 }
 .submit_application h3{
-    font-size: 38px;
-    line-height:42px;
+    font: 38px/42px '20 Kopeek';
     color: #181818;
     margin-bottom: 11px;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
 .submit_application p{
-    font-size: 26px;
-    line-height:29px;
+    font: 26px/29px '20 Kopeek';
     color: #181818;
     margin-bottom: 27px;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
@@ -346,45 +307,40 @@ header .soc{
     border: 1px solid #181818;
     box-sizing: border-box;
     border-radius: 10px;
-    font-size: 18px;
-    line-height: 25px;
+    font: 18px/25px '20 Kopeek';
     color: #868686;
     display: inline-block;
     max-width: 350px;
     width: 100%;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
 #first_name{
     margin-right: 30px;
 }
-.btn_application{
+.submit_application button{
     margin-left: 30px;
+}
+.btn_application{
     padding: 23px 47px;
     text-decoration: none;
     display: inline-block;
     background: #2B59C3;
     border-radius: 40px;
-    font-size: 18px;
-    line-height:25px;
+    font: 18px/25px '20 Kopeek';
     color: #FFFFFF;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
     border: none;
 }
 #i_agree{
-    margin-top: 21px;
-    font-size: 18px;
-    line-height: 25px;
+    font: 18px/25px '20 Kopeek';
     color: #181818;
     width: 18px;
     height: 18px;
     border: 1px solid #000000;
     box-sizing: border-box;
     border-radius: 5px;
-    font-family: '20 Kopeek';
     font-weight: normal;
     font-style: normal;
 }
@@ -394,6 +350,137 @@ header .soc{
 .checkbox{
     padding-right: 11px;
 }
+.minor_banner{
+    background-image: url("../images/Rectangle 32.jpg");
+    background-size: cover;
+    background-position: center top;
+    height: 100vh;
+    padding-top: 282px;
+    padding-bottom: 80px;
+}
+.minor_banner h2 {
+    color: #FFFFFF;
+    font: 55px/55px '20 Kopeek';
+    font-weight: normal;
+    font-style: normal;
+}
+.list_2 span{
+    color: #FFFFFF;
+}
+.list_2 p{
+    color: #FFFFFF;
+    font-size: 15px;
+    line-height: 19px;
+    max-width: 168px;
+}
+footer{
+    padding-top: 150px;
+    padding-bottom: 20px;
+}
+.connect h3{
+    font: 38px/42px '20 Kopeek';
+    font-style: normal;
+    font-weight: normal;
+    color: #181818;
+    margin-bottom: 30px;
+}
+.contact{
+    margin-left: 103px;
+}
+.headline{
+    font: 38px/42px '20 Kopeek';
+    font-style: normal;
+    font-weight: normal;
+    color: #181818;
+    margin-bottom: 30px;
+}
+.first_name_phone_2{
+    padding: 23px 244px 23px 29px;
+    border: 1px solid #181818;
+    box-sizing: border-box;
+    border-radius: 10px;
+    font: 18px/25px '20 Kopeek';
+    font-weight: normal;
+    font-style: normal;
+    color: #868686;
+    display: inline-block;
+    max-width: 445px;
+    width: 100%;
+}
+#first_name_1{
+    margin-bottom: 10px;
+}
+.contact p{
+    font: 26px/29px '20 Kopeek';
+    font-style: normal;
+    font-weight: normal;
+    color: #181818;
+    margin-bottom: 15px;
+}
+#i_agree_1{
+    font: 18px/25px '20 Kopeek';
+    width: 18px;
+    height: 18px;
+    box-sizing: border-box;
+    font-weight: normal;
+    font-style: normal;
+}
+.checkbox_label{
+    display: flex;
+    margin-top: 21px;
+}
+footer button{
+    margin-top: 51px;
+    margin-bottom: 127px;
+}
+.headline_2{
+    font: 38px/42px '20 Kopeek';
+    font-style: normal;
+    font-weight: normal;
+    color: #181818;
+    margin-bottom: 14px;
+}
+.media div{
+    margin-right: 30px;
+    max-width: 255px;
+    background-color: #2B59C3;
+    border-radius: 10px;
+    padding: 6px 10px 16px 8px;
+    color: #FFFFFF;
+    font: 18px/25px '20 Kopeek';
+    font-weight: normal;
+    font-style: normal;
+}
+.media a{
+    text-decoration: none;
+    color: #FFFFFF;
+    margin-top: 25px;
+    display: inline-block;
+}
+
+
+.logo{
+    animation: scale 2s infinite;
+    display: inline-block;
+    transform: scale(1);
+    position: relative;
+}
+
+@keyframes scale {
+    0%{
+        transform: scale(1);
+        bottom: 0;
+    }
+    50%{
+        bottom: -50px;
+    }
+    100%{
+        transform: scale(1.3);
+        bottom: 0;
+    }
+
+}
+
 
 
 
