--- a/css/style.css
+++ b/css/style.css
@@ -134,11 +134,13 @@ header .soc{
     font-weight: normal;
     font-style: normal;
 }
+.brand_identity{
+    display: flex;
+    width: 100%;
+}
 .description p{
     font: 18px/25px '20 Kopeek';
     color: #181818;
-    text-align: left;
-    vertical-align: top;
     margin-left: 30px;
     font-weight: normal;
     font-style: normal;
@@ -158,6 +160,9 @@ header .soc{
     font-style: normal;
 }
 .list{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
     list-style: none;
     text-align: left;
 }
@@ -222,7 +227,7 @@ header .soc{
     max-width: 1151px;
 }
 .project_banner{
-    display: block;
+    display: inline-block;
     width: 100%;
 }
 .d_flex_1{
@@ -352,10 +357,12 @@ header .soc{
 }
 .flex_container{
     max-width: 960px;
+    width: 100%;
     margin-bottom: 60px;
   display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .item_1{
@@ -406,35 +413,95 @@ header .soc{
 .flex_container img{
     display: inline-block;
 }
+.stages_2{
+    margin-top: 150px;
+    margin-bottom: 150px;
+}
+.flex_block{
+    display: flex;
 
+}
+.flex_block.border .block_2{
+    border-top: 1px solid #868686;
+}
+.flex_block.border .block_4{
+    border-top: 1px solid #868686;
+}
+.flex_block:first-of-type .block_1{
+    border-radius: 10px 10px 0 0;
+}
+.flex_block:last-of-type .block_1{
+    border-radius: 0 0 10px 10px;
+}
+.block_1{
+    background-color: #2B59C3;
+    width: 15%;
+    padding: 26px 5px 0 10px;
+    margin-right: 30px;
+    font: 26px/29px '20 Kopeek';
+    font-style: normal;
+    font-weight: normal;
+    color: #FFFFFF;
+}
+.block_2{
+    width: 25%;
+    padding: 26px 0;
+}
+.block_3{
+    width: 25%;
+    padding: 26px 10px 26px 19px;
+    border: 4px solid #2B59C3;
+}
+.flex_block .block_3{
+    border-top: 1px solid #868686;
+    border-bottom: none;
+}
+.flex_block:first-of-type .block_3{
+    border-top: 4px solid #2B59C3;
+    border-radius: 10px 10px 0 0;
+}
+.flex_block:last-of-type .block_3{
+    border-bottom: 4px solid #2B59C3;
+    border-radius: 0 0 10px 10px;
+}
+.block_4{
+    width: 32%;
+    padding: 26px 20px 26px 15px;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
+.flex_block:first-of-type .block_4{
+    border-top: none;
+}
+.empty{
+    visibility: hidden;
+}
+.caption{
+    font: 38px/42px '20 Kopeek';
+    color: #868686;
+}
+.caption_2{
+    font: 38px/42px '20 Kopeek';
+    color: #2B59C3;
+}
+.content{
+    font: 15px/19px '20 Kopeek';
+    color: #181818;
+}
+.flex_block.border .border_2{
+    border-top: none;
+}
+.flex_block:first-of-type .block_1{
+    padding-bottom: 0;
+}
+.flex_block:first-of-type .block_2{
+    padding-bottom: 0;
+}
+.flex_block:first-of-type .block_3{
+    padding-bottom: 0;
+}
+.flex_block:first-of-type .block_4{
+    padding-bottom: 0;
+}
 
 
 .minor_banner{
