--- a/css/style.css
+++ b/css/style.css
@@ -27,20 +27,19 @@
     margin: 0;
 }
 .main_banner{
-    background-image: url("../images/01 1.jpg");
+    background-image: url("../images/011.jpg");
     background-size: cover;
     background-position: center top;
     height: 100vh;
-    padding-top: 344px;
 }
 .main_banner.banner_2{
-    background-image: url("../images/01 2.jpg");
+    background-image: url("../images/012.jpg");
 }
 .main_banner.banner_3{
-    background-image: url("../images/01 3.jpg");
+    background-image: url("../images/013.jpg");
 }
 .main_banner.banner_4{
-    background-image: url("../images/01 4.jpg");
+    background-image: url("../images/014.jpg");
 }
 .container{
     margin: auto;
@@ -52,6 +51,7 @@ header{
     left: 0;
     top: 0;
     padding-top: 31px;
+    z-index: 2;
 }
 header .container{
     display: flex;
@@ -61,6 +61,12 @@ header .container{
     width: 100%;
     display: flex;
     justify-content: space-between;
+}
+.position{
+    position: absolute;
+    width: 100%;
+    z-index: 3;
+    top: 344px;
 }
 header p{
     margin-left: 22px;
@@ -98,19 +104,19 @@ header .soc{
     display: inline-block;
     line-height: 38px;
 }
-.main_banner h1{
+.position h1{
     font: 55px/55px '20 Kopeek';
     color: #181818;
     font-weight: normal;
     font-style: normal;
     margin-bottom: 30px;
 }
-.main_banner p{
+.position p{
     font: 34px/37px '20 Kopeek';
     margin-bottom: 65px;
     color: #181818;
 }
-.main_banner .btn{
+.position .btn{
     display: inline-block;
     padding: 23px 47px;
     background: #FFFFFF;
@@ -517,7 +523,7 @@ header .soc{
 
 
 .minor_banner{
-    background-image: url("../images/Rectangle 32.jpg");
+    background-image: url("../images/Rectangle32.jpg");
     background-size: cover;
     background-position: center top;
     height: 100vh;
