--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,7 @@ header .soc{
 .item_3{
     flex: 1;
     margin-right: 24px;
+
 }
 .item_4{
     flex: 1;
@@ -524,15 +525,18 @@ header .soc{
     font-style: normal;
     font-weight: normal;
     color: #FFFFFF;
+    order: 1;
 }
 .block_2{
     width: 25%;
     padding: 26px 0;
+    order: 2;
 }
 .block_3{
     width: 25%;
     padding: 26px 10px 26px 19px;
     border: 4px solid #2B59C3;
+    order: 3;
 }
 .flex_block .block_3{
     border-top: 1px solid #868686;
@@ -549,6 +553,7 @@ header .soc{
 .block_4{
     width: 32%;
     padding: 26px 20px 26px 15px;
+    order: 4;
 
 }
 .flex_block:first-of-type .block_4{
